# lab2-JawayriaHashmi

task4/: makefile
task5/: CMakeLists.txt
